apps/workloads/headlamp/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: headlamp
  namespace: headlamp
spec:
  selector:
    app: headlamp
  ports:
  - port: 80
    targetPort: 4466
